cmake_minimum_required(VERSION 3.27)
project(Learning_Chapter4)

set(CMAKE_CXX_STANDARD 20)
add_executable(Learning_Chapter4 main.cpp
        Queue.cpp
        Queue.hpp
        Stack.hpp
        Stack.cpp
)

#- `a`: 在光标后插入文
#- `b`: 向后（向左）移动到上一个单词的开头
#- `c`: 更改命令，后跟移动命令来更改文本区域
#- `d`: 删除命令，后跟移动命令来删除文本区域
#- `e`: 向前（向右）移动到当前或下一个单词的结尾
#- `f`: 向前搜索字符，后跟要搜索的字符
#- `g`: 用于多种扩展命令的前缀，如 `gg`（移动到文件开头）
#- `h`: 向左移动一个字符
#- `i`: 在光标位置插入文本
#- `j`: 向下移动一行
#- `k`: 向上移动一行
#- `l`: 向右移动一个字符
#- `m`: 设置标记，后跟一个字母来标记当前位置
#- `n`: 重复上一次搜索命令
#- `o`: 在当前行下方开启新行
#- `p`: 在光标后粘贴内容
#- `q`: 开始或结束宏录制
#- `r`: 替换光标处的字符
#- `s`: 删除光标处的字符并进入插入模式
#- `t`: 向前搜索至字符之前，后跟要搜索的字符
#- `u`: 撤销上一次操作
#- `v`: 进入可视模式
#- `w`: 向前（向右）移动到下一个单词的开头
#- `x`: 删除光标处的字符
#- `y`: 复制命令，后跟移动命令来复制文本区域
#- `z`: 折叠命令的前缀，如 `za`（切换折叠状态）
#- `;`: 重复上一次使用 `f`, `t`, `F`, 或 `T` 命令的搜索
#- `,`: 反向重复上一次使用 `f`, `t`, `F`, 或 `T` 命令的搜索

#- `A`: 在行尾插入文本
#- `B`: 向后（向左）移动到上一个单词的开头，单词以非空白字符分隔
#- `C`: 更改到行尾的内容
#- `D`: 删除到行尾的内容
#- `E`: 向前（向右）移动到当前或下一个单词的结尾，单词以非空白字符分隔
#- `F`: 向后搜索字符，后跟要搜索的字符
#- `G`: 移动到文件的最后一行
#- `H`: 移动到屏幕的顶部行
#- `I`: 在行首非空白字符前插入文本
#- `J`: 将下一行合并到当前行的末尾
#- `K`: 在外部帮助系统中查找光标下的单词
#- `L`: 移动到屏幕的底部行
#- `M`: 移动到屏幕的中间行
#- `N`: 反向重复上一次搜索命令
#- `O`: 在当前行上方开启新行
#- `P`: 在光标前粘贴内容
#- `Q`: 退出到 Ex 模式（在 Vim 中）
#- `R`: 进入替换模式，可替换多个字符
#- `S`: 删除当前行并进入插入模式
#- `T`: 向后搜索至字符之后，后跟要搜索的字符
#- `U`: 撤销对当前行的所有更改
#- `V`: 进入行可视模式
#- `W`: 向前（向右）移动到下一个单词的开头，单词以非空白字符分隔
#- `X`: 删除光标前的字符
#- `Y`: 复制整行（相当于 `yy`）
#- `Z`: 保存并退出命令的前缀，如 `ZZ`（保存并关闭当前文件）
#- `0`: 移动到当前行的开头
#- `^`: 移动到当前行的第一个非空白字符
#- `$`: 移动到当前行的末尾
#- `%`: 跳转到匹配的括号
#- `#`: 反向进行关键字搜索
#- `*`: 向前进行关键字搜索
#- `(` 和 `)`: 向后或向前移动一个句子
#- `{` 和 `}`: 向后或向前移动一个段落
#- `[` 和 `]`: 用于各种跳转命令的前缀
#- `<` 和 `>`: 用于缩进调整
#- `/` 和 `?`: 进行向前或向后的搜索
#- `:`: 进入命令行模式，用于输入 Ex 命令
#- `;`: 重复上一次使用 `f`, `t`, `F`, 或 `T` 命令的搜索
#- `'`: 跳转到之前设置的标记
#- `"`: 用于指定寄存器的前缀，例如在复制和粘贴操作中
#- `|`: 移动到指定的列号
#- `!`: 执行外部命令
#- `=`: 对选中的代码进行格式化（在可视模式下）
#- `_`: 移动到行首的非空白字符（与 `^` 类似）
#- `+` 和 `-`: 向下或向上移动一行，并定位到行首的非空白字符
#- `[` 和 `]`: 用于各种跳转命令的前缀，例如跳转到代码块的开始或结束
#- `{` 和 `}`: 向前或向后跳转一个段落
#- `~`: 切换光标位置字符的大小写
#- `@`: 执行宏
#- `#`: 在光标位置注释或取消注释代码（可能依赖于特定插件）
#- `*`: 在光标位置进行符号搜索，例如查找变量或函数的使用
#- `/`: 向下搜索字符串
#- `?`: 向上搜索字符串
#- `&`: 重复上一次的替换操作
#- `(` 和 `)`: 向后或向前移动一个句子
#- `<` 和 `>`: 减少或增加缩进
#- `.`: 重复上一次的编辑操作
#- `,`: 在最近两个跳转位置之间切换

# D - 删除光标至行尾的所有字符
# dW - 删除光标到下一个单词之前的空白字符
# dB - 删除光标到上一个单词之前的空白字符
# dE - 删除光标到下一个单词之后的空白字符
# d$ - 删除光标到行尾的所有字符
# d^ - 删除光标到行首的所有字符
# d0 - 删除光标到行首的所有字符
# dG - 删除光标到文件尾的所有字符
# d1G - 删除光标到文件首的所有字符
# dgg - 删除光标到文件首的所有字符
# :%s/。/ - 将所有句号删除